=========================================================================
                           C H A N G E   L O G
=========================================================================

Version 0.2a 2015-01-07
    * Python 3.x support.
    * pyprimes now also works with Python 2.4 through 2.7.
    * Refactored to a package layout instead of a single file.
    * Tests and compatibility layer are documented as private
      implementation details.
    * Test suite has significantly more coverage.
    * primes() accepts optional start and end values.
    * primes_above() and primes_below() are redundant and removed in
      favour of primes(start, end).
    * Support for generating and testing primes with alternate
      implementations or algorithms (pyprimes.strategic module).
    * Much improved documentation for probabilistic algorithms.
    * Primality testing supports probabilistic as well as deterministic
      tests, that is, "not prime, certainly prime, probably prime".
    * Added prev_prime() function.
    * Fast, efficient deterministic primality tests up to 2**64.

Version 0.1.3a 2014-09-11 (not publicly released)
    * Add ability to generate primes between start and end limits.
    * Add a quite naive next_prime function.
    * Add test suite.

Version 0.1.2a 2012-08-25
    * Move "awful" and naive algorithms into their own namespace.
    * Improve documentation for such awful algorithms.
    * "Probably prime" warnings now default to off.
    * Use an explicit function argument instead of a global variable
      for "probably prime" warnings.
    * Allow probabilistic primality tests to set the number of trials.

Version 0.1.1a 2012-02-22
    * Work around mbcs bug in distutils: see issue 10945 on the Python
      bug tracker http://bugs.python.org/issue10945
    * Fixed other minor issues with the setup script and metadata.
    * Neglected to update this changelog, sigh.

Version 0.1.0 2012-02-22
    Initial release.
